project path css

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
 
 
-  <link href="C:\Users\dasik\projekts\sikroy\srEsrey\dist\output.css" rel="stylesheet">
-  <link href="C:\Users\dasik\projekts\sikroy\srEsrey\dist\src\input.css" rel="stylesheet">
+  <link href="dist\output.css" rel="stylesheet">
+  <link href="dist\src\input.css" rel="stylesheet">
 </head>
 <body>
   <div class="container-fluid mx-auto area">
