project path css reverted

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
 
 
-  <link href="dist\output.css" rel="stylesheet">
-  <link href="dist\src\input.css" rel="stylesheet">
+  <link href="dist/output.css" rel="stylesheet">
+  <link href="dist/src/input.css" rel="stylesheet">
 </head>
 <body>
   <div class="container-fluid mx-auto area">
@@ -48,7 +48,7 @@
     </nav>
   <div class="bg-gray-800 -m-8 ">
   <div class="bg-transparent  -m-8" >
-    <img class="lg:w-auto   md-flex" src="C:\Users\dasik\projekts\sikroy\srEsrey\dist\dope.png" >
+    <img class="lg:w-auto   md-flex" src="dist\dope.png" >
   </div>
 
 
