--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <nav class="flex  justify-between flex-wrap bg-gray-800 p-6 ">
     <div class="flex  items-center flex-shrink-0 slime mr-6">
 
-      <span class="vibes font-semibold text-4xl tracking-wide  animate-bounce"><img class="logo-size" src="dist\logo.png"</span>
-      <p class="vibes">Mister Senor</p>
+      <span class="vibes font-semibold text-xl tracking-wide  animate-bounce"><img class="logo-size" src="dist\logo.png"</span>
+
     </div>
 
     <div class="w-full block flex-grow lg:flex lg:items-left lg:w-auto   md-flex">
