--- a/index.html
+++ b/index.html
@@ -133,6 +133,24 @@ You can also catch them on LBTV with a slap stick music and fashion show dubbed 
    <span clasName="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#Art</span>
  </div>
 </div>
+    <div class="p-12">
+
+<div class="max-w-sm rounded overflow-hidden shadow-lg transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110 bg-slime hover:bg-gray-900 text-white font-semibold py-3 px-6 rounded-md">
+<img src =  "dist\2009me.jpg">
+   <div class="font-bold text-xl mb-2"><a href="https://www.facebook.com/2weirdos/" target="_blank">Roy Reyes Musica</a></div>
+   <p class="text-gray-700 text-base">
+     Original music, remixes, and mash-ups from 2008 - 2015 </p>  <p class="text-gray-700 text-base">
+
+Setting trends and pioneering new sounds with help from my friends.
+   </p>
+   <p><a href="https://soundcloud.com/royreyesmusica" target="_blank">SoundCloud</a></p>
+ </div>
+ <div clasName="px-6 pt-4 pb-2">
+   <span clasName="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#House</span>
+   <span clasName="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#Dubstep</span>
+   <span clasName="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#DNB</span>
+ </div>
+</div>
 </div>
     </section>
 
