updated widget player

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ Setting trends and pioneering new sounds with help from my friends.
             </section>
             </div>
             <section id="play">
-              <iframe width="100%" height="400" src="https://www.mixcloud.com/widget/iframe/?feed=%2Fsikroyesrey%2Flive-at-sandfish-ps-april-16th-2022-coachella-weekend-1%2F" frameborder="0" ></iframe>
+            <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2Fsikroyesrey%2Fspring-tings-mix-2024%2F" frameborder="0" ></iframe>
             </section>
 
 </body>
