added booking offcanvas button

--- a/index.html
+++ b/index.html
@@ -115,6 +115,24 @@ into my head."</p> <p> <a href="https://www.ocweekly.com/the-spell-at-the-blue-c
 </div>
     <div class="p-12">
 
+      <!-- IDEA: place offcanvas here -->
+
+      <button class="btn btn-Success" type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop">
+  Booking Price
+</button>
+
+<div class="offcanvas offcanvas-start" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="staticBackdropLabel">Booking Price</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <div>
+      $200 per hr
+    </div>
+  </div>
+</div>
+
 <div class="max-w-sm rounded overflow-hidden shadow-lg transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110 bg-slime hover:bg-gray-900 text-white font-semibold py-3 px-6 rounded-md">
 <img src =  "https://live.staticflickr.com/65535/51933265075_6e921e8cf7_c.jpg">
    <div class="font-bold text-xl mb-2"><a href="https://www.facebook.com/2weirdos/" target="_blank">Dos Weirdos</a></div>
