--- a/index.html
+++ b/index.html
@@ -226,20 +226,14 @@ Setting trends and pioneering new sounds with help from my friends.
             </section>
             <!-- IDEA: place offcanvas here -->
 
-            <button class="btn btn-Success" type="button" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop">
-        Booking Price
-      </button>
-
-      <div class="offcanvas offcanvas-start" data-bs-backdrop="static" tabindex="-1" id="staticBackdrop" aria-labelledby="staticBackdropLabel">
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="staticBackdropLabel">Booking Price</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-          <div>
-            $200 per hr
-          </div>
-        </div>
-      </div>
+            <div class="offcanvas offcanvas-start show text-bg-dark" tabindex="-1" id="offcanvasDark" aria-labelledby="offcanvasDarkLabel">
+              <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasDarkLabel">Booking Price</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvasDark" aria-label="Close"></button>
+              </div>
+              <div class="offcanvas-body">
+                <p>$250 an hr.</p>
+              </div>
+            </div>
 </body>
 </html>
