--- a/index.html
+++ b/index.html
@@ -224,16 +224,14 @@ Setting trends and pioneering new sounds with help from my friends.
             <section id="play">
             <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2Fsikroyesrey%2Fspring-tings-mix-2024%2F" frameborder="0" ></iframe>
             </section>
-            <!-- IDEA: place offcanvas here -->
-
-            <div class="offcanvas offcanvas-start show text-bg-dark" tabindex="-1" id="offcanvasDark" aria-labelledby="offcanvasDarkLabel">
-              <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasDarkLabel">Booking Price</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvasDark" aria-label="Close"></button>
-              </div>
-              <div class="offcanvas-body">
-                <p>$250 an hr.</p>
-              </div>
-            </div>
+            <!-- IDEA: booking price card here -->
+            <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Booking Price</h5>
+        <p class="card-text">$250 an hr depending on event. If I need to outsource for additional equipment then there will be additonal cost. </p>
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+      </div>
+    </div>
 </body>
 </html>
