added booking stuff

--- a/index.html
+++ b/index.html
@@ -225,11 +225,14 @@ Setting trends and pioneering new sounds with help from my friends.
             <iframe width="100%" height="400" src="https://player-widget.mixcloud.com/widget/iframe/?feed=%2Fsikroyesrey%2Fspring-tings-mix-2024%2F" frameborder="0" ></iframe>
             </section>
             <!-- IDEA: booking price card here -->
-            <div class="card" style="width: 18rem;">
-      <div class="card-body">
-        <h5 class="card-title">Booking Price</h5>
-        <p class="card-text">$250 an hr depending on event. If I need to outsource for additional equipment then there will be additonal cost. </p>
-      
+            <div class="max-w-sm rounded overflow-hidden shadow-lg transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110 bg-slime hover:bg-gray-900 text-white font-semibold py-3 px-6 rounded-md">
+          <h3>Booking Price</h3></div>
+             <p class="text-gray-700 text-base">
+               $250 an hour for a dj booth, 2 qsc k-12, and a Pioneer Rev-5. Ant additional equipment will increment costs. </p>  <p class="text-gray-700 text-base">
+
+
+           </div>
+
       </div>
     </div>
 </body>
