--- a/index.html
+++ b/index.html
@@ -226,9 +226,10 @@ Setting trends and pioneering new sounds with help from my friends.
             </section>
             <!-- IDEA: booking price card here -->
             <div class="max-w-sm rounded overflow-hidden shadow-lg transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110 bg-slime hover:bg-gray-900 text-white font-semibold py-3 px-6 rounded-md">
-          <h3>Booking Price</h3></div>
+          <h3>Booking Price</h3>
              <p class="text-gray-700 text-base">
                $250 an hour for a dj booth, 2 qsc k-12, and a Pioneer Rev-5. Ant additional equipment will increment costs. </p>  <p class="text-gray-700 text-base">
+                 </div>
 
 
            </div>
