--- a/index.html
+++ b/index.html
@@ -228,8 +228,10 @@ Setting trends and pioneering new sounds with help from my friends.
             <div class="max-w-sm rounded overflow-hidden shadow-lg transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110 bg-slime hover:bg-gray-900 text-white font-semibold py-3 px-6 rounded-md">
           <h3 class="font-bold text-xl mb-2 slime">Booking Price</h3>
              <p class="text-gray-700 text-base">
-               $250 an hour for a dj booth, 2 qsc k-12, and a Pioneer Rev-5. Ant additional equipment will increment costs. </p>  <p class="text-gray-700 text-base">
-                 </div>
+               $250 an hour.
+               Please contact for further information. </p>
+              <a href="sikroyesrey@gmail.com" class="card-link">Booking Contact</a>                
+             </div>
 
 
            </div>
