--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ Setting trends and pioneering new sounds with help from my friends.
              <p class="text-gray-700 text-base">
                $250 an hour.
                Please contact for further information. </p>
-              <a href="sikroyesrey@gmail.com" class="card-link">Booking Contact</a>
+              <a href="sikroyesrey@gmail.com" class="card-link Success">Booking Contact</a>
              </div>
              <div>
 
