--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@ Setting trends and pioneering new sounds with help from my friends.
             <!-- IDEA: booking price card here -->
             <div class="max-w-sm rounded overflow-hidden shadow-lg transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-110 bg-slime hover:bg-gray-900 text-white font-semibold py-3 px-6 rounded-md">
           <h3 class="font-bold text-xl mb-2 slime">Booking Price</h3>
-             <p class="text-gray-700 text-base">
-               $250 an hour.
-               Please contact for further information. </p>
-              <a input type="www.sikroyesrey@gmail.com" target="_blank" class="card-link">Booking Contact</a>
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+<div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+
              </div>
              <div>
 
