--- a/index.html
+++ b/index.html
@@ -230,9 +230,8 @@ Setting trends and pioneering new sounds with help from my friends.
              <p class="text-gray-700 text-base">
                $250 an hour.
                Please contact for further information. </p>
-               <label for="exampleInputEmail1" class="form-label">Email address</label>
-                   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                   <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+               <a class="money" href= "mailto: sikroyesrey@gmail.com"> Click for further information</a>
+
              </div>
              <div>
 
