--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ Setting trends and pioneering new sounds with help from my friends.
              <p class="text-gray-700 text-base">
                $250 an hour.
                Please contact for further information. </p>
-               <a class="money" href= "mailto: sikroyesrey@gmail.com"> Click for further information</a>
+               <a class="money" href= "mailto: sikroyesrey@gmail.com"> Booking Contact</a>
 
              </div>
              <div>
